removed links and edited BeginResearch.html
removed links and edited BeginResearch.html

--- a/client/stylesheets/custom-styles.css
+++ b/client/stylesheets/custom-styles.css
@@ -2,7 +2,8 @@
   margin-bottom: 0px;
   margin-top: 3%;
   padding: 3%;
-  background-color: grey;
+  background-color: #011f51;
+  color:white;
 }
 .img-author {
   max-width: 15%;
