--- a/client/stylesheets/bootstrap-mods.css
+++ b/client/stylesheets/bootstrap-mods.css
@@ -15,3 +15,8 @@
     background-color: none !important;
     border-color: none !important;
 }
+.btn-primary {
+    background: #29c3fa;
+    border-color: #29c3fa;
+    color: #ffffff;
+}
