--- a/client/templates/BeginResearch.html
+++ b/client/templates/BeginResearch.html
@@ -10,32 +10,36 @@
           <br>
           <h4> What is the target goal you would like to reach? </h4>
           <div class="input-group">
-            <input type="text" class="form-control" aria-label="..." placeholder="$">
+            <input type="text" class="form-control" aria-label="..." placeholder="$" id="amount">
             <div class="input-group-btn">
-              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">USD <span class="caret"></span></button>
+              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id = "moneyType">USD</button>
               <ul class="dropdown-menu dropdown-menu-right">
-                <li><a href="#">CAD</a></li>
-                <li><a href="#">GBP</a></li>
-                <li><a href="#">EUR</a></li>
+                <li><a href="#" id="Cur1">CAD</a></li>
+                <li><a href="#" id="Cur2">GBP</a></li>
+                <li><a href="#" id="Cur3">EUR</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">AUD</a></li>
+                <li><a href="#" id="Cur4">AUD</a></li>
               </ul>
             </div><!-- /btn-group -->
           </div><!-- /input-group -->
-          <span> Minimum $500 </span>
+          <span id ="MinAmount"> Minimum $500 </span>
+          <br>
+          <span id="AmountError" style="color:red"></span>
           <br>
           <br>
           <br>
           
           <h4> What is the title of your research? </h4>
-          <input type="text" class="form-control" aria-label="..." placeholder="Research title...">
+          <input type="text" class="form-control" aria-label="..." id="ResearchTitle" placeholder="Research title...">
           <span> 50 Character Limit </span>
           <br>
+          <span id="TitleError" style="color:red"></span>
+
           <br>
           <br>
           <br>
           <br>
-          <button type="button" style = "background-color: #29c3fa; color: white;" class="btn btn-default btn-lg">Start your movement!</button>
+          <a href="" style = "background-color: #29c3fa; color: white;" id="BeginResearch" class="btn btn-default btn-lg">Start your movement!</a>
 
         </div><!-- /.col-lg-6 -->
     </div>
