Starting to work on backend of profile page. middle of iteration 2

--- a/client/templates/nav.html
+++ b/client/templates/nav.html
@@ -31,3 +31,8 @@
   </div><!-- /.container-fluid -->
 </nav>
 </template>
+
+<!-- delete template if not using ian:accounts-ui-bootstrap-3 -->
+<template name="_loginButtonsAdditionalLoggedInDropdownActions">
+  <button class="btn btn-default btn-block" id="login-buttons-edit-profile">View Profile</button>
+</template>
