--- a/client/templates/profilePage.html
+++ b/client/templates/profilePage.html
@@ -7,8 +7,8 @@
 			</div>
 
 			<div class="col-md-7">
-				<h2>Mario Machado <span class="small">PhD Astro Physics</span></h2>
-				Supported 2 projects - Mississauga, Canada - Joined Today
+				<h2>{{name}} <span class="small">{{title}}</span></h2>
+				Supported 2 projects - Mississauga, Canada - Joined 
 
 				<p class="space-top-sm">An MIT gradute in Astro Physics and computer science. I have a great interest in space exploration, and research which will greatly affect NASA and private space companies like SpaceX. I work at cal tech where I conduct research on the big bang theory and it's ramifications on space time itself </p>
 			</div>
