Progressed on starting a research, added packages that may/ may not be needed
- added semantic
- added countries
- added packages to upload files (that doesn’t work/ don’t know how to
do)

--- a/client/templates/StartResearchTemplate.html
+++ b/client/templates/StartResearchTemplate.html
@@ -15,11 +15,11 @@
 					<li id="summary"><a href="#Summary" data-toggle="tab">Summary</a></li>
 					<li id="team"><a href="#Team" data-toggle="tab">Team</a></li>	
 					<li id="rewards"><a href="#Rewards" data-toggle="tab">Rewards</a></li>
-					<li id="extras"><a href="#Extras" data-toggle="tab">Extras</a></li>		
+					<li id="ekxtras"><a href="#Extras" data-toggle="tab">Extras</a></li>		
 				</ul>
 			</div>
 
-			<div class="tab-content " >
+			<div class="tab-content" >
 				<div id="Fundamentals" class="tab-pane fade in active">
 					{{> Fundamentals}}
 					
