--- a/client/templates/department.html
+++ b/client/templates/department.html
@@ -2,15 +2,15 @@
 	<h5> Department </h5>
 		<div class = "col-md-4">
 		    <div class="ui dropdown button departments">
-			  <span class="text">Choose Department</span>
+			  <span class="text department">Choose Department</span>
 			  <i class="dropdown icon"></i>
 			  <div class="menu">
 			    <div class="item">
-			      <span class="text department">Mathematics</span>
+			      <span class="text math_department">Mathematics</span>
 			    </div>
 			    <div class="item">
 			      <i class="dropdown icon"></i>
-			      <span class="text department">Health</span>
+			      <span class="text health_department">Health</span>
 			      <div class="menu">
 			        <div class="item">Fitness</div>
 			        <div class="item">Nutrition</div>
@@ -18,7 +18,7 @@
 			    </div>
 			    <div class="item">
 			      <i class="dropdown icon"></i>
-			      <span class="text department">Science</span>
+			      <span class="text science_department">Science</span>
 			      <div class="menu">
 			        <div class="item">Medical</div>
 			        <div class="item">Physical</div>
