--- a/client/templates/Fundamentals.html
+++ b/client/templates/Fundamentals.html
@@ -14,17 +14,16 @@
 		        <br>
 		    </form>
 		</div>
+		<span id = "SummaryTextErrorMsg" style="color:red"></span>
 		<br>
 		<h5> Research Project Image </h5>
-		<img src = "placeholder.gif" id = "ResearchPhoto"/>
+    	{{> upload_bootstrap}}
+		<br>
+		<img src = "placeholder.gif" id = "ResearchPhoto" style="max-width: 200px; max-height:200px;"/>
 		<br>
 		<br>
-		<a href="" style = "background-color: #29c3fa; color: white;" class="btn btn-default btn-lg">Upload A Photo</a>
-		<br>
-		<br>
-		<br>
-
 		{{>Department}}
+		<span id = "DepartmentErrorMsg" style="color:red"></span>
 		<br>
 	    <br>
 	    <br>
@@ -35,10 +34,13 @@
     	<medium>Please decide on the number of days for this to be funded. (MAX. 60 days) </medium>
     	<br>
     	<input type = "text" class="form-control funding-days" aria-label="..." placeholder = "#" />
+    	<span id = "DaysLeftErrorMsg" style="color:red"></span>
     	<br>
     	<div class = "SaveCon">
-			<a href="#Summary" id = "toSummary" data-toggle="tab" style = "background-color: #29c3fa; color: white;" class="btn btn-default btn-lg">Save & Continue</a>
+			<a href="" id = "toSummary" data-toggle="tab" style = "background-color: #29c3fa; color: white;" class="btn btn-default btn-lg">Save & Continue</a>
 		</div>
+    	<br>
+    	<span id = "fundamentalErrorMsg" style="color:red"></span>
     	<br>
 
 	</div>
