--- a/client/templates/Summary.html
+++ b/client/templates/Summary.html
@@ -10,8 +10,7 @@
 		<h3> Share your video! </h3>
 		<br>
 		<h5> Video URL: </h5>
-		<input type = "text" placeholder = "Youtube Link" name = "video-link" />
-		<a href="" style = "background-color: #29c3fa; color: white;" class="btn btn-default btn-lg">Upload A Video</a>
+		{{> uploadVideo}}
 
 		<br>
 		<br>
