--- a/client/templates/nav.html
+++ b/client/templates/nav.html
@@ -34,5 +34,5 @@
 
 <!-- delete template if not using ian:accounts-ui-bootstrap-3 -->
 <template name="_loginButtonsAdditionalLoggedInDropdownActions">
-  <button class="btn btn-default btn-block" id="login-buttons-edit-profile">View Profile</button>
+  <button class="btn btn-default btn-block" id="login-buttons-profile">Profile</button>
 </template>
