--- a/client/templates/profilePage.html
+++ b/client/templates/profilePage.html
@@ -94,7 +94,7 @@
 	      	</div>
 	      	<div class="modal-footer">
 	      		<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-		        <button type="submit" class="btn btn-primary save-changes">Save changes</button>
+		        <button type="submit" class="btn btn-primary save-changes" data-dismiss="modal">Save changes</button>
 	    	</div>
 	    </div>
 	  </div>
