Pushing files to S3
- Grabs file url and places it in DB

--- a/client/templates/Fundamentals.html
+++ b/client/templates/Fundamentals.html
@@ -17,7 +17,7 @@
 		<span id = "SummaryTextErrorMsg" style="color:red"></span>
 		<br>
 		<h5> Research Project Image </h5>
-    	{{> upload_bootstrap}}
+    	{{> uploadFile}}
 		<br>
 		<img src = "placeholder.gif" id = "ResearchPhoto" style="max-width: 200px; max-height:200px;"/>
 		<br>
