--- a/client/templates/Summary.html
+++ b/client/templates/Summary.html
@@ -10,8 +10,7 @@
 		<h3> Share your video! </h3>
 		<br>
 		<h5> Video URL: </h5>
-		{{> uploadFile}}
-
+		{{> upload_bootstrap}}
 		<br>
 		<br>
 		<p> Your Research Pitch! </p>
@@ -26,4 +25,5 @@
 		<br>
 
 	</div>
+	
 </template>
