--- a/client/templates/homePage.html
+++ b/client/templates/homePage.html
@@ -8,10 +8,9 @@
 		</div>
 
 		<div class="row">
-		    {{> projectThumbNail}}
-		    {{> projectThumbNail}}
-		    {{> projectThumbNail}}
-
+			{{#each project in getPopularProjects}}
+				{{> projectThumbNail (calcPercentage project)}}
+			{{/each}}
 	  	</div> <!-- .row -->
 
 	  	<div class="page-header">
@@ -19,9 +18,9 @@
 		</div>
 
 		<div class="row">
-		    {{> projectThumbNail}}
-		    {{> projectThumbNail}}
-		    {{> projectThumbNail}}
+		    {{#each project in getEndSoonProjects}}
+				{{> projectThumbNail (calcPercentage project)}}
+			{{/each}}
 	  	</div> <!-- .row -->
 	  	<div class="page-header">
   			
