--- a/client/templates/projectThumbNail.html
+++ b/client/templates/projectThumbNail.html
@@ -3,35 +3,35 @@
 	    <div class="thumbnail">
 	    	<img src="placeholder-blue.png" alt="...">
 	        <div class="caption">
-				<h4>Project Title</h4>
+				<h4>{{title}}</h4>
 				<img class="img-author img-circle" src="placeholder-profile.png">
 				Author
 				<br>
 				<br>
-				<p>Some small description about the project, in order to get backers' attention!</p>
+				<p>{{summary}}</p>
 				<br>
-				<b>$1,023,234 USD</b>
+				<b>$ {{formatNumber currentAmountFunded}}</b>
 
 	  			<div class="progress">
-  					<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-    				<span class="sr-only">60% Complete</span>
+  					<div class="progress-bar" role="progressbar" aria-valuenow="{{percentFunded}}" aria-valuemin="0" aria-valuemax="100" style="width: {{percentFunded}}%; max-width: 100%;">
+    				<span class="sr-only">{{percentFunded}}% Complete</span>
   					</div>
 				</div>
 
 				<div class="row">
 					<div class="col-sm-3">
-						<b>60%</b>
+						<b>{{percentFunded}}%</b>
 						<br>
 						<span>Funded</span>
 					</div>
 					<div class="col-sm-3">
-						<b>320</b>
+						<b>{{formatNumber numberOfSupporters}}</b>
 						<br>
 						<p>Supporters</p>
 
 					</div>
 					<div class="col-sm-3">
-						<b>40</b>
+						<b>{{daysLeft}}</b>
 						<br>
 						<p>Days Left</p>
 					</div>
