1st half of 4th iteration
update meteor
handled errors on project page
route project to appropriate page with ID
edited discover page

--- a/client/templates/BeginResearch.html
+++ b/client/templates/BeginResearch.html
@@ -40,6 +40,8 @@
           <br>
           <br>
           <a href="" style = "background-color: #29c3fa; color: white;" id="BeginResearch" class="btn btn-default btn-lg">Start your movement!</a>
+          <span id="LoginError" style="color:red"></span>
+
 
         </div><!-- /.col-lg-6 -->
     </div>
