--- a/client/templates/StartResearchTemplate.html
+++ b/client/templates/StartResearchTemplate.html
@@ -1,8 +1,7 @@
 <template name = "StartResearch">
 	<div class = "container">
 		<div class = "row">
-	      	<h1 style= "font-family: 'Benton Sans','Helvetica','sans-serif'; font-size: 40px"> 
-	      		Research Title
+	      	<h1 id="researchTitle" style= "font-family: 'Benton Sans','Helvetica','sans-serif'; font-size: 40px"> 
 	     	</h1>
 
 			{{>Countries}}
