--- a/client/templates/countries.html
+++ b/client/templates/countries.html
@@ -250,8 +250,9 @@
 		  <div class="item" data-value="zw"><i class="zw flag"></i>Zimbabwe</div>
 		</div>
 	</div>
-</div>
+	<span class = "countriesError" style="color:red;"></span>
 
+</div>
 <script type="text/javascript">
 	$('.ui.normal.dropdown')
   .dropdown({
