--- a/client/templates/profilePage.html
+++ b/client/templates/profilePage.html
@@ -6,7 +6,7 @@
 	<div class="container">
 		<div class="row space-top-lg">
 			<div class="col-md-2">
-				<img class="img-rounded img-responsive" src="placeholder-profile.png">
+				<img class="img-rounded img-responsive profile-pic" src="placeholder-profile.png">
 			</div>
 
 			<div class="col-md-7">
