--- a/client/templates/projectsLayout.html
+++ b/client/templates/projectsLayout.html
@@ -8,51 +8,22 @@
     <hr>
     <br>
     <div class = "col-md-4">
-      <div class="dropdown">
-          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"                 aria-haspopup="true" aria-expanded="true" style= "display: block; width: 100%;">
-            All Categories
-          <span class="caret"></span>  
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li role="separator" class="divider"></li>
-          <li><a href="#">Separated link</a></li>
-        </ul>
+      <div class="ui fluid multiple search normal selection dropdown countries">
+        <input type="hidden" name="country">
+        <i class="dropdown icon"></i>
+        <div class="default text">Select Country</div>
+        <div class="menu">
+          <div class="item" data-value="af"><i class="af flag"></i>Afghanistan</div>
+          <div class="item" data-value="ax"><i class="ax flag"></i>Aland Islands</div>
+          <div class="item" data-value="al"><i class="al flag"></i>Albania</div>
+          <div class="item" data-value="dz"><i class="dz flag"></i>Algeria</div>
+          <div class="item" data-value="as"><i class="as flag"></i>American Samoa</div>
+          <div class="item" data-value="ad"><i class="ad flag"></i>Andorra</div>
+          <div class="item" data-value="ao"><i class="ao flag"></i>Angola</div>
+        </div>
       </div>
     </div>
-    <div class = "col-md-4">
-      <div class="dropdown">
-        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"                    aria-haspopup="true" aria-expanded="true" style= "display: block; width: 100%;">
-          Dropdown
-          <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li role="separator" class="divider"></li>
-          <li><a href="#">Separated link</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <div class = "col-md-4">
-      <div class="dropdown">
-        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"                    aria-haspopup="true" aria-expanded="true" style= "display: block; width: 100%;">
-          Trending
-          <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-          <li><a href="#">New</a></li>
-          <li><a href="#">Ending soon</a></li>
-          <li><a href="#">Needs help</a></li>
-          <li role="separator" class="divider"></li>
-          <li><a href="#">Most Funded</a></li>
-        </ul>
-      </div>
-    </div>
+    
   </div>
   <br>
   <div class="section-header">
@@ -81,5 +52,13 @@
   width: 100%;
 }
 </style>
+
+<script type="text/javascript">
+  $('.ui.normal.dropdown')
+  .dropdown({
+    maxSelections: 1
+  })
+;
+</script>
 
 </template>
