--- a/client/templates/team.html
+++ b/client/templates/team.html
@@ -17,7 +17,7 @@
 		<hr>
 		<p> If other people are helping you with your research, or this is a team effort and there does not exist a "leader", please provide the rest of the team's email (excluding yours), so that they can be subscribed to this research project. As a subscriber (and publisher), this project will appear on that persons profile page. Only those with StudyFund accounts may be listed as a team member. </p>
 
-		<input type = "text" placeholder = "Team Member" name = "Teammate" id="teammate"/>
+		<input type = "text" placeholder = "Email Address" name = "Teammate" id="teammate"/>
 		<a href="" style = "background-color: #29c3fa; color: white;" id = "teammateBtn" class="btn btn-default btn-lg">INVITE TEAMMATE</a>
 		<br>
 		<div class = "SaveCon">
